compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_function_param.snap
---
source: tests/fixtures.rs
assertion_line: 1335
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_function_param.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate function parameter
   ╭─[tests/fixtures/diagnostics/types/duplicate_function_param.ml:1:4]
 1 │ fn add(x: i64, x: i64) {
   ·    ─┬─
   ·     ╰── this parameter name is already used by this function
 2 │   x + x
   ╰────
  help: choose a unique name for each function parameter
